# CyrillicRenderer

./: CMakeLists.txt  Dockerfile  README.md  TextRenderer.cpp  TextRenderer.hpp  main.cpp
